<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/entered_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount_hint"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="24sp"
        tools:ignore="Autofill"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/from_currency_layout"/>

    <LinearLayout
        android:id="@+id/from_currency_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entered_amount"
        app:layout_constraintBottom_toTopOf="@id/to_currency_layout">

        <TextView
            android:id="@+id/from_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:text="@string/from_text"
            android:fontFamily="@font/poppins_regular"
            android:textColor="?colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/from_currency_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/to_currency_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from_currency_layout"
        app:layout_constraintBottom_toTopOf="@id/convert_button">

        <TextView
            android:id="@+id/to_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:text="@string/to_text"
            android:fontFamily="@font/poppins_regular"
            android:textColor="?colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/to_currency_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="8dp"
        android:text="@string/convert_button_text"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textColor="?colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/to_currency_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
